--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body id="gradient">
-	<h1>Background Generator</h1>
+	<h1>Background Generator v1.3</h1>
 	<h2>Please pick your colors </h2>
 	<input  class = "color1" type="color" name="color1" value="#00ff00">
 	<input  class="color2" type="color" name="color2" value="#ff0000">
