--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Background Generator</title>
-	<link rel="stylesheet" type="text/css" href="style2.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gradient">
 	<h1>Background Generator v1.33</h1>
@@ -11,6 +11,6 @@
 	<input  class="color2" type="color" name="color2" value="#ff0000">
 	<h2>Current Background</h2>
 	<h3></h3>
-	<script type="text/javascript" src="script2.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
