--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body id="gradient">
 	<h1>Background Generator Conflict</h1>
+	<h1>Made by meeeee </h1>
 	<h2>Please pick your colors </h2>
 	<input  class = "color1" type="color" name="color1" value="#00ff00">
 	<input  class="color2" type="color" name="color2" value="#ff0000">
